[tool.poetry]
name = "friend-helping"
version = "0.1.0"
description = ""
authors = ["Tai <hotai1806@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.26.0"
beautifulsoup4 = "^4.12.3"
undetected-chromedriver = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
